# monochrome

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/agent/: mod.rs  random.rs  unmotivated.rs
src/eval/: mod.rs  stone_difference.rs
