[package]
name = "monochrome"
version = "0.5.1"
authors = ["Emil Englesson <englesson.emil@gmail.com>"]
edition = "2021"
description = "Othello AI"
repository = "https://github.com/LimeEng/monochrome/"
license = "MIT"
keywords = ["othello"]

exclude = [
    ".github/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magpie = {version = "0.9.0", features = ["serde"]}
rand = "0.8.0"
rand_seeder = "0.2.0"
rand_pcg = "0.3.0"
